--- a/package.json
+++ b/package.json
@@ -10,31 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.2",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
-    "react": "^18.2.0",
+    "prettier": "^3.2.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
+    "react": "^18.2.0",
     "vite-plugin-windicss": "^1.9.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.5",
-    "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-router-hash-link": "^2.4.9",
+    "@types/react": "^18.2.66",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint": "^8.57.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-env": "^1.0.1"
+    "vite-plugin-env": "^1.0.1",
+    "vite": "^5.2.0"
   }
 }
